cardiacsim-MPI/pinaple.txt
Compiling code

Compiling Source File -- cardiacsim_parallel_2.C
---------------------
mpic++  -DLINUX   -O3   -g -fopenmp -c cardiacsim_parallel_2.C
cardiacsim_parallel_2.C: In function ‘void simulate(double**, double**, double**, double**, double, int, int, double, double, double, double, double, double, double, int, int, bool)’:
cardiacsim_parallel_2.C:172:13: error: not enough for loops to collapse
  172 |             int my_th = omp_get_thread_num();
      |             ^~~
make: *** [cardiacsim_parallel_2.o] Error 1
Running Job...!
===============================================================================
Running compiled binary...
MPI1 + OMP16
--------------------------------------------------------------------------
By default, for Open MPI 4.0 and later, infiniband ports on a device
are not used by default.  The intent is to use UCX for these devices.
You can override this policy by setting the btl_openib_allow_ib MCA parameter
to true.

  Local host:              rk02
  Local adapter:           mlx5_0
  Local port:              1

--------------------------------------------------------------------------
--------------------------------------------------------------------------
WARNING: There was an error initializing an OpenFabrics device.

  Local host:   rk02
  Local device: mlx5_0
--------------------------------------------------------------------------
Rank       : 0
Size       : 1
omp thread 0 of 1Grid Size       : 200
Duration of Sim : 1000
Time step dt    : 0.0515744
Process geometry: 1 x 1

Plot freq 0
Number of Iterations        : 19390
Elapsed Time (sec)          : 1.81919
Sustained Gflops Rate       : 11.9376
Sustained Bandwidth (GB/sec): 13.643

Max: 0.966244 L2norm: 0.646961
